# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-12-03 20:07:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-93

    Summary:
      start working on the release files (CHANGES.txt, setup.py)
    Revision:
      itools--main--0.12--patch-93


    modified files:
     CHANGES.txt Changelog setup.py


2005-12-03 19:40:21 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-92

    Summary:
      resources, fix zodb when asked for a non-existent resource
    Revision:
      itools--main--0.12--patch-92


    modified files:
     Changelog resources/zodb.py


2005-12-03 19:35:13 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-91

    Summary:
      cms, fix add new object when there is a name clash (#220)
    Revision:
      itools--main--0.12--patch-91


    modified files:
     Changelog cms/Folder.py


2005-12-03 19:27:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-90

    Summary:
      cms, removing obsolete i18n code
    Revision:
      itools--main--0.12--patch-90


    modified files:
     Changelog cms/Folder.py cms/LocaleAware.py cms/Metadata.py
     cms/Root.py cms/workflow.py


2005-12-03 18:50:53 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-89

    Summary:
      cms, fix rename (#150)
    Revision:
      itools--main--0.12--patch-89


    modified files:
     Changelog cms/Folder.py cms/ui/Folder_rename.xml.en


2005-12-02 15:20:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-88

    Summary:
      cms, remove broken debug code
    Revision:
      itools--main--0.12--patch-88


    removed files:
     cms/.arch-ids/debug.py.id cms/debug.py
     cms/ui/.arch-ids/Folder_manage_content.xml.en.id
     cms/ui/.arch-ids/Text_manage_content.xml.en.id
     cms/ui/Folder_manage_content.xml.en
     cms/ui/Text_manage_content.xml.en

    modified files:
     Changelog cms/Folder.py cms/Metadata.py


2005-12-02 14:53:05 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-87
